--- a/money_mate/pubspec.yaml
+++ b/money_mate/pubspec.yaml
@@ -36,6 +36,15 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
   get: ^4.7.2
+  google_fonts: ^6.2.1
+  flutter_screenutil: ^5.9.3
+  animated_bottom_navigation_bar: ^1.4.0
+  salomon_bottom_bar: ^3.3.2
+  persistent_bottom_nav_bar: ^6.2.1
+  flutter_datetime_picker: ^1.5.1
+  carousel_slider: ^5.0.0
+  fl_chart: ^0.70.2
+  # flutter_native_splash: ^2.4.4
 
 dev_dependencies:
   flutter_test:
@@ -60,9 +69,11 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
+  assets:
+
+    - assets/icons/
+    - assets/images/
+    - assets/animations/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
