--- a/money_mate/pubspec.yaml
+++ b/money_mate/pubspec.yaml
@@ -30,6 +30,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+    
 
 
   # The following adds the Cupertino Icons font to your application.
@@ -54,6 +55,7 @@ dependencies:
 
 
   flutter_native_splash: ^2.4.4
+  flutter_dotenv: ^5.2.1
 
 dev_dependencies:
   flutter_test:
@@ -81,7 +83,7 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-
+    - assets/config/.env
     - assets/icons/
     - assets/images/
     - assets/animations/
